<resources>
    <string name="app_name">Bouncing Ball</string>
    <string name="CAMPO_USUARIO">Usuario</string>
    <string name="CAMPO_PASSWORD">Contraseña</string>
    <string name="TEXTO_BOTON_INICIAR_SESION">Iniciar sesión</string>
    <string name="TEXTO_BOTON_REGISTRARSE">Registrarse</string>
    <string name="TEXTO_BOTON_JUGAR">Jugar</string>
    <string name="TEXTO_BOTON_RANKING">Ranking</string>
    <string name="TEXTO_BOTON_OPCIONES">Opciones</string>
    <string name="TEXTO_BOTON_SALIR">Salir</string>
    <string name="TEXTO_BOTON_VOLVER">Volver</string>
    <string name="ETIQUETA_CORREO">Correo</string>
    <string name="ETIQUETA_PUNTAJE_JUGADOR">Puntaje máximo</string>
    <string name="ETIQUETA_IDIOMA">Idioma</string>
    <string name="ETIQUETA_SONIDO">Sonido</string>
    <string name="ETIQUETA_NIVELES">Nivel de dificultad </string>
    <string name="ETIQUETA_NIVEL_FACIL">Facil</string>
    <string name="ETIQUETA_NIVEL_INTERMEDIO">Intermedio</string>
    <string name="ETIQUETA_NIVEL_DIFICIL">Difícil</string>
    <string name="TEXTO_BOTON_ACEPTAR">Aceptar</string>
    <string name="TEXTO_BOTON_SIGUIENTE_NIVEL">Siguiente nivel</string>
    <string name="TEXTO_BOTON_VOLVER_MENU_PRINCIPAL">Volver al menú principal</string>
    <string name="TEXTO_PISTA_CAMPO_USUARIO">Ingrese su nombre de usuario</string>
    <string name="TEXTO_PISTA_CAMPO_CONTRASENIA">Ingrese su contraseña</string>
    <string name="TEXTO_PISTA_CAMPO_CORREO">Ingrese su correo electrónico</string>
    <string name="TEXTO_BOTON_CERRAR_SESION">Cerrar sesión</string>
    <string name="ETIQUETA_OPCIONES">Opciones</string>
    <string name="TEXTO_GANASTE_JUEGO">¡¡Ganaste!!</string>
    <string name="TEXTO_GANASTE_JUEGO_EN">¡¡You win!!</string>
    <string name="CAMPO_USUARIO_EN">Username</string>
    <string name="CAMPO_PASSWORD_EN">Password</string>
    <string name="TEXTO_BOTON_INICIAR_SESION_EN">Login</string>
    <string name="TEXTO_BOTON_REGISTRARSE_EN">Register</string>
    <string name="TEXTO_BOTON_JUGAR_EN">Play</string>
    <string name="TEXTO_BOTON_RANKING_EN">Ranking</string>
    <string name="TEXTO_BOTON_OPCIONES_EN">Settings</string>
    <string name="TEXTO_BOTON_SALIR_EN">Exit</string>
    <string name="TEXTO_BOTON_VOLVER_EN">Back</string>
    <string name="ETIQUETA_CORREO_EN">Email</string>
    <string name="ETIQUETA_PUNTAJE_JUGADOR_EN">Max score</string>
    <string name="ETIQUETA_IDIOMA_EN">Language</string>
    <string name="ETIQUETA_SONIDO_EN">Sound</string>
    <string name="ETIQUETA_NIVELES_EN">Difficulty level</string>
    <string name="ETIQUETA_NIVEL_FACIL_EN">Easy</string>
    <string name="ETIQUETA_NIVEL_INTERMEDIO_EN">Intermediate</string>
    <string name="ETIQUETA_NIVEL_DIFICIL_EN">Hard</string>
    <string name="TEXTO_BOTON_ACEPTAR_EN">Accept</string>
    <string name="TEXTO_PISTA_CAMPO_USUARIO_EN">Enter your username</string>
    <string name="TEXTO_PISTA_CAMPO_CONTRASENIA_EN">Enter your password</string>
    <string name="TEXTO_PISTA_CAMPO_CORREO_EN">Enter your email</string>
    <string name="TEXTO_BOTON_CERRAR_SESION_EN">Logout</string>
    <string name="ETIQUETA_OPCIONES_EN">Settings</string>
    <string name="TEXTO_BOTON_SIGUIENTE_NIVEL_ES">Siguiente Nivel</string>
    <string name="TEXTO_BOTON_SIGUIENTE_NIVEL_EN">Next Level</string>
    <string name="TEXTO_BOTON_VOLVER_MENU_PRINCIPAL_ES">Volver al menu principal</string>
    <string name="TEXTO_BOTON_VOLVER_MENU_PRINCIPAL_EN">Back to Main Menu</string>
    <string name="TEXTO_PERDISTE">¡¡Perdiste!!</string>
    <string name="TEXTO_PERDISTE_EN">¡¡You lose!!</string>
</resources>
