<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002134"
    tools:context=".activity.MenuPrincipal" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="33dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/fuente_uno"
                    android:gravity="right"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="158dp" />

                <TextView
                    android:id="@+id/textV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/imageView4"
                    android:layout_marginBottom="33dp"
                    android:fontFamily="@font/fuente_uno"
                    android:text=""
                    android:layout_marginRight="10dp"
                    android:textColor="#FFFFFF"

                    android:textSize="10sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="158dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="109dp"
                android:layout_above="@+id/button5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="59dp"
                android:layout_marginRight="59dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/imginicio" />

            <Button
                android:id="@+id/button5"
                style="@style/estilos_boton"
                android:layout_above="@+id/button6"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/press_button"
                android:hint="@string/TEXTO_BOTON_JUGAR"
                android:onClick="play"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        style="@style/estilos_boton"
        android:id="@+id/button6"
        android:layout_above="@+id/button7"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/press_button"
        android:hint="@string/TEXTO_BOTON_RANKING"
        android:onClick="mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        style="@style/estilos_boton"
        android:id="@+id/button7"
        android:layout_above="@+id/button8"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/press_button"
        android:hint="@string/TEXTO_BOTON_OPCIONES"
        android:onClick="opciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        style="@style/estilos_boton"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/boton_salir"
        android:layout_marginBottom="58dp"
        android:hint="@string/TEXTO_BOTON_CERRAR_SESION"
        android:onClick="anterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
